# OpenGl-GLFW-denek

./: .gitignore  CMakeLists.txt  ForestFireSimulation.cpp  OpenGl-CMake.cpp  OpenGl-CMake.h  OpenGl-GLFW denek.sln  OpenGl-GLFW denek.vcxproj  OpenGl-GLFW denek.vcxproj.filters  Persvective_test.cpp  README.md  Shader_tester.cpp  TextRenderer.h  game_object_basic.h  glad.c  main.cpp  model_loading_test.cpp  my_first_triangle.cpp  stb_implementation.cpp
Events/: Basic_event_test.h  Keyborad_events.h  Mouse_events.h
Headers/: Camera_test.h  Globals.h  Input_Manager.h  Logger.h  Quad_renderer.h  Shader.h  Some_functions.h  TextRenderer.h  The_event_manager.h  game_object_basic.h  game_object_basic_model.h
Models/: Tree1.mtl
Shaders/Fragment_shaders/: Basic_fragment.frag  Basic_texture_fragment.frag  Black_fragment.frag  Light_texture_fragment.frag  Loaded_model_fragment.frag  Text_render_fragment.frag
Shaders/Geometry_shaders/: Text_render_geometry.geom
Shaders/Vertex_shaders/: Basic_texture_vertex.vert  Basic_vertex.vert  Light_MVP_texture_vertex.vert  Loaded_model_vertex.vert  MVP_texture_vertex.vert  Text_render_vertex.vert
Textures/Font_texture_Atlas/: DejaVu Sans Mono_512X256_16x32.txt
includes-libs/Lib/: glfw3.lib
includes-libs/Libs-Debug/: assimp-vc143-mtd.lib  glfw3.lib  unit.exp  unit.lib  zlibstaticd.lib
includes-libs/Libs-Release/: assimp-vc143-mt.lib  unit.exp  zlibstatic.lib
includes-libs/includes/assimp/: revision.h
includes-libs/includes/glad/: glad.h
